--- a/public/signup.html
+++ b/public/signup.html
@@ -21,6 +21,7 @@
             <div class="signup">
                 <form class="sign-up" id="signup-form">
                     <h2 class="title">Sign Up</h2>
+                    <center><small><span id="error" style="color: red"></span></small></center>
                     <!--Take image input-->
                     <center><input type="file" id="photo" />
                         <!--<button id="upload_img"class="btn" onclick="uploadImage()">Upload Image</button>-->
